--- a/WebApp/login.html
+++ b/WebApp/login.html
@@ -20,30 +20,17 @@
 
 <button onclick="document.getElementById('id01').style.display='block'" style="color:black; font-family: 'Offside';position:absolute;top:50%;bottom:40%;right:40%;left:20%;">Login</button>
 
-
 <div id="id01" class="modal">
-
+  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
   <form class="modal-content animate" action="/action_page.php">
-    <div class="imgcontainer">
-      <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
-    </div>
+    
 
     <div class="container">
-      <label><b>Username</b></label>
-      <input type="text" placeholder="Enter Username" name="uname" required>
-
-      <label><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-
-      <button type="submit">Login</button>
-      <label>
-        <input type="checkbox" checked="checked"> Remember me
-      </label>
-    </div>
-
-    <div class="container" style="background-color:#f1f1f1">
-      <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtn">Cancel</button>
-      <span class="psw">Forgot <a href="#">password?</a></span>
+      <form action="/action_page.php" method="get">
+          <input type="text"  name="user" placeholder = "Enter Username" required><br>
+          <input type="password" name="pass" placeholder = "Enter Password" required><br>
+          <button type="submit">Login</button>
+      </form>
     </div>
   </form>
 </div>
@@ -63,30 +50,19 @@ window.onclick = function(event) {
 <button onclick="document.getElementById('id02').style.display='block'" style="color:black; font-family: 'Offside';position:absolute;top:50%;bottom:40%;left:40%;right:60%;">Sign Up</button>
 
 <div id="id02" class="modal">
-  <span onclick="document.getElementById('id01').style.display='none'" class="close" title="Close Modal">&times;</span>
+  <span onclick="document.getElementById('id02').style.display='none'" class="close" title="Close Modal">&times;</span>
   <form class="modal-content" action="/action_page.php">
     <div class="container">
       <h1>Sign Up</h1>
       <p>Please fill in this form to create an account.</p>
-      <hr>
-      <label><b>Email</b></label>
-      <input type="text" placeholder="Enter Email" name="email" required>
-
-      <label><b>Password</b></label>
-      <input type="password" placeholder="Enter Password" name="psw" required>
-
-      <label><b>Repeat Password</b></label>
-      <input type="password" placeholder="Repeat Password" name="psw-repeat" required>
-
-      <label>
-        <input type="checkbox" checked="checked" style="margin-bottom:15px"> Remember me
-      </label>
-
-      <p>By creating an account you agree to our <a href="#" style="color:dodgerblue">Terms & Privacy</a>.</p>
-
       <div class="clearfix">
-        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtnSU">Cancel</button>
+        <form>
+          <input type="text" name="email" placeholder = "Enter Email" required><br>
+          <input type="password" name="pass" placeholder = "Enter Password" required><br>
+          <input type="password" name="psw-repeat" placeholder = "Repeat Password" required><br>
         <button type="submit" class="signupbtn">Sign Up</button>
+        <button type="button" onclick="document.getElementById('id01').style.display='none'" class="cancelbtnSU">Cancel</button>
+      </form>
       </div>
     </div>
   </form>
